抽离播放状态为公共状态，修改默认数据命名

--- a/src/components/PlayerPannel/PlayerPannel.css
+++ b/src/components/PlayerPannel/PlayerPannel.css
@@ -10,4 +10,8 @@
   width:3rem;
   height:3rem;
   border-radius: 50%;
+  animation: rotatePic 1s timing-function delay iteration-count direction fill-mode;
+}
+@keyframes rotatePic{
+  
 }
