--- a/src/components/PlayerPannel/PlayerPannel.css
+++ b/src/components/PlayerPannel/PlayerPannel.css
@@ -10,8 +10,9 @@
   width:3rem;
   height:3rem;
   border-radius: 50%;
-  animation: rotatePic 1s timing-function delay iteration-count direction fill-mode;
+  animation: rotatePic 10s linear infinite;
 }
 @keyframes rotatePic{
-  
+  50% {transform: rotate(180deg);}
+  100% {transform: rotate(360deg);}
 }
