--- a/src/components/playerTab/progressBar.css
+++ b/src/components/playerTab/progressBar.css
@@ -5,7 +5,8 @@
   box-sizing: border-box;
 }
 .timeText{
-  transform:scale(.9)
+  transform:scale(.9);
+  color:white;
 }
 .barWrap{
   cursor: pointer;
